# PathHelper

./: CMakeLists.txt  Pathfinder.cpp  field.txt  true_field.txt  walls_0_start_0_direction_0.txt  walls_0_start_0_direction_1.txt  walls_0_start_1_direction_0.txt  walls_0_start_1_direction_1.txt  walls_0_start_2_direction_0.txt  walls_0_start_2_direction_1.txt  walls_0_start_3_direction_0.txt  walls_0_start_3_direction_1.txt  walls_1_start_0_direction_0.txt  walls_1_start_0_direction_1.txt  walls_1_start_1_direction_0.txt  walls_1_start_1_direction_1.txt  walls_1_start_2_direction_0.txt  walls_1_start_2_direction_1.txt  walls_1_start_3_direction_0.txt  walls_1_start_3_direction_1.txt  walls_2_start_0_direction_0.txt  walls_2_start_0_direction_1.txt  walls_2_start_1_direction_0.txt  walls_2_start_1_direction_1.txt  walls_2_start_2_direction_0.txt  walls_2_start_2_direction_1.txt  walls_2_start_3_direction_0.txt  walls_2_start_3_direction_1.txt
Block/: Block.cpp  Block.hpp  CMakeLists.txt
Board/: Board.cpp  Board.hpp  CMakeLists.txt
Bound/: Bound.cpp  Bound.hpp  CMakeLists.txt
G3/: CMakeLists.txt  G3.cpp  G3.hpp
PathHelper/: CMakeLists.txt  PathHelper.cpp  PathHelper.hpp
Snake/: CMakeLists.txt  Snake.cpp  Snake.hpp
TimeChecker/: CmakeLists.txt  TimeChecker.cpp  TimeChecker.hpp
XPSHelper/: CMakeLists.txt  XPSHelper.cpp  XPSHelper.hpp
XPSTest/: uimskaya.rps  uimskaya.sps
